# humantime

./: .gitignore  LICENSE  README.md  pyproject.toml
humantime/: __init__.py  core.py
